--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,57 @@
     <artifactId>javacore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.httpcomponents.client5</groupId>-->
+<!--            <artifactId>httpclient5</artifactId>-->
+<!--            <version>5.2</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>de.vandermeer</groupId>
+            <artifactId>svg2vector</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+
+<!--        <dependency>-->
+<!--            <groupId>org.apache.xmlgraphics</groupId>-->
+<!--            <artifactId>batik-rasterizer</artifactId>-->
+<!--            <version>1.16</version>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.xmlgraphics/fop &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.xmlgraphics</groupId>-->
+<!--            <artifactId>fop</artifactId>-->
+<!--            <version>2.7</version>-->
+<!--        </dependency>-->
+
+
+
+    </dependencies>
+
+
+
+
+
+
 
 </project>
