--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,15 @@
 <!--            <version>5.2</version>-->
 <!--        </dependency>-->
 
+
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>de.vandermeer</groupId>
             <artifactId>svg2vector</artifactId>
@@ -50,6 +59,15 @@
 <!--            <artifactId>fop</artifactId>-->
 <!--            <version>2.7</version>-->
 <!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+
+
 
 
 
